Fixed mobile alignment issue

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: sans-serif;
 }
@@ -84,6 +85,18 @@ h3 {
 
 a {
     text-decoration: none !important;
+}
+
+@media screen and (max-width: 500px) {
+    .listing {
+        margin: 0;
+        margin-left: -40px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .listing {
+        margin-left: -30px;
+    }
 }
   
 /* body {
